<resources>
    <string name="app_name">Kid Zero</string>
    <string name="company_rights">Powered by Eternal Byte LTD.</string>
    <string name="write_phone_num">Write your phone number</string>
    <string name="sign_in">Sign in</string>
    <string name="verify">Verify</string>
    <string name="verify_code">Verification code</string>
    <string name="phone_num">Phone number</string>
    <string name="we_sent_code">We sent verification code to your phone number</string>
    <string name="inp">Input</string>
    <string name="is_empty"> is empty</string>
    <string name="write_correct_and_try">write correct number and try again.</string>
    <string name="verify_code_incorrect">Verification code is not correct, write correct code and try again.</string>
    <string name="resend_code">I didn’t receive the code</string>
    <string name="who_device">whose is this device?</string>
    <string name="child">child</string>
    <string name="parent">parent</string>
    <string name="resend_timeout">Able to resend message after</string>
    <string name="set_name_for_device">Want to create a name for this device? current name is</string>
    <string name="find_parental_device_text">For find and bind this account to parental device. You need to write phone number from parental account.</string>
    <string name="device_name">Device name</string>
    <string name="default_device_name">Set default by phone name</string>
    <string name="find_child">Find and sent invite</string>
    <string name="find_child_text">Write device phone number for find and sent request.</string>
    <string name="set_custom_name">Set custom name</string>
    <string name="find_parent">Find and add parental device</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="inv_req_notfound">At the moment you have no requests.</string>
    <string name="settings">Settings</string>
    <string name="quest">Quest</string>
    <string name="app_control">App control</string>
</resources>