<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/white_up_corner_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:layout_marginTop="30sp"
            android:src="@mipmap/search"
            android:layout_width="match_parent"
            android:layout_height="120sp"></ImageView>

        <TextView
            android:id="@+id/deviceNameTextView"
            android:layout_marginTop="30sp"
            android:textSize="18sp"
            android:gravity="center|left"
            android:text="@string/find_child_text"
            android:layout_marginHorizontal="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>

        <EditText
            android:phoneNumber="true"
            android:id="@+id/customKidNameEditText"
            android:maxLength="25"
            android:hint="@string/phone_num"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp"
            android:layout_marginHorizontal="30sp"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:singleLine="true"></EditText>

        <RelativeLayout
            android:id="@+id/setDefaultName"
            android:layout_marginBottom="30sp"
            android:layout_marginHorizontal="30sp"
            android:background="@drawable/stroke_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/light_purple"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/find_child"
                android:layout_width="match_parent"
                android:layout_height="60sp"></TextView>
        </RelativeLayout>
    </LinearLayout>


</ScrollView>