<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mask="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:layout_margin="20sp"
            android:background="@drawable/content_border"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginTop="30sp"
                android:src="@mipmap/identification"
                android:layout_width="120sp"
                android:layout_height="120sp"></ImageView>

            <TextView
                android:id="@+id/deviceNameTextView"
                android:layout_marginTop="30sp"
                android:textSize="18sp"
                android:gravity="center|left"
                android:text="@string/set_name_for_device"
                android:layout_marginHorizontal="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>

            <EditText
                android:id="@+id/customKidNameEditText"
                android:maxLength="25"
                android:hint="@string/device_name"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20sp"
                android:layout_marginHorizontal="30sp"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:singleLine="true"></EditText>

            <RelativeLayout
                android:id="@+id/setCustomName"
                android:layout_marginBottom="20sp"
                android:layout_marginHorizontal="30sp"
                android:background="@drawable/gradient_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/set_custom_name"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"></TextView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setDefaultName"
                android:layout_marginBottom="30sp"
                android:layout_marginHorizontal="30sp"
                android:background="@drawable/stroke_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/light_purple"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/default_device_name"
                    android:layout_width="match_parent"
                    android:layout_height="60sp"></TextView>
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>


</ScrollView>