<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_margin="20sp"
        android:background="@drawable/content_border"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="30sp"
            android:src="@mipmap/members"
            android:layout_width="120sp"
            android:layout_height="120sp"></ImageView>

        <TextView
            android:layout_marginTop="30sp"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/who_device"
            android:layout_marginHorizontal="30sp"
            android:layout_width="match_parent"
            android:layout_height="50sp"></TextView>

        <RelativeLayout
            android:layout_marginTop="30sp"
            android:id="@+id/childDevice"
            android:clickable="true"
            android:layout_marginHorizontal="30sp"
            android:background="@drawable/stroke_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/light_purple"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/child"
                android:layout_width="match_parent"
                android:layout_height="60sp"></TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/parentalDevice"
            android:layout_marginVertical="30sp"
            android:clickable="true"
            android:layout_marginHorizontal="30sp"
            android:background="@drawable/gradient_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/parent"
                android:layout_width="match_parent"
                android:layout_height="60sp"></TextView>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>