<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_red_bg"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/appbar"></include>
    <View
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="0.7sp"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ProfileAva"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:background="@color/white"
                android:padding="3sp"
                android:scaleType="centerCrop"
                android:src="@mipmap/woman"
                app:shapeAppearance="@style/CircleRoundImg"
                app:strokeColor="@color/white"
                app:strokeWidth="3sp" />

            <ImageView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginLeft="40sp"
                android:layout_marginTop="-35sp"
                android:src="@mipmap/change" />

            <TextView
                android:id="@+id/childName_TextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingVertical="20sp"
                android:text="Name"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8sp"
                    android:background="@drawable/white_cornered_button"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50sp"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="10sp"
                        android:layout_marginLeft="10sp"
                        android:src="@mipmap/star" />

                    <TextView
                        android:id="@+id/stars_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:layout_marginRight="20sp"
                        android:gravity="center"
                        android:maxLength="7"
                        android:text="..."
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8sp"
                    android:background="@drawable/white_cornered_button"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50sp"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="10sp"
                        android:layout_marginLeft="10sp"
                        android:src="@mipmap/day_and_night" />

                    <TextView
                        android:id="@+id/bedTime_TextView"
                        android:layout_width="match_parent"
                        android:layout_height="60sp"
                        android:layout_marginRight="20sp"
                        android:gravity="center"
                        android:maxLength="7"
                        android:text="..."
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout

            android:orientation="vertical"
            android:background="@drawable/white_up_corner_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/appControl"
                android:clickable="true"
                android:layout_margin="20sp"
                android:background="@drawable/stroke_button"
                android:layout_width="match_parent"
                android:layout_height="60sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:text="@string/app_control"
                    android:textColor="@color/light_purple"
                    android:textSize="18sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/childQuests"
                android:clickable="true"
                android:layout_marginHorizontal="20sp"
                android:layout_marginBottom="20sp"
                android:background="@drawable/stroke_button"
                android:layout_width="match_parent"
                android:layout_height="60sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:text="@string/quest"
                    android:textColor="@color/light_purple"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:clickable="true"
                android:layout_marginBottom="20sp"
                android:layout_marginHorizontal="20sp"
                android:background="@drawable/gradient_button"
                android:layout_width="match_parent"
                android:layout_height="60sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>